objects/Customer_Performance__c.object
<CustomObject>
    <fields>
        <fullName>AMS_Delta__c</fullName>
        <formula>AMS_Revenue__c - Prior_Customer_Performance__r.AMS_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMS_Revenue__c</fullName>
        <label>AMS Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMS_Trend__c</fullName>
        <formula>IF(Prior_Customer_Performance__r.AMS_Revenue__c &gt; AMS_Revenue__c, &quot;DOWN&quot;,
IF(Prior_Customer_Performance__r.AMS_Revenue__c &lt; AMS_Revenue__c, &quot;UP&quot;,
&quot;&quot;
))

/*IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;up&quot;)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Trend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Performance</relationshipLabel>
        <relationshipName>Customer_Performance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DISTRIBUTION_Revenue__c</fullName>
        <label>DISTRIBUTION Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Notes__c</fullName>
        <label>Last Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NETWORKING_Revenue__c</fullName>
        <label>NETWORKING Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Delta__c</fullName>
        <formula>Total__c -  Prior_Customer_Performance__r.Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAYOUT_Revenue__c</fullName>
        <label>PLAYOUT Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PND_Delta__c</fullName>
        <formula>PND_Revenue__c -  Prior_Customer_Performance__r.PND_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PND Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PND_Revenue__c</fullName>
        <formula>PLAYOUT_Revenue__c +  NETWORKING_Revenue__c +  DISTRIBUTION_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PLAYOUT + NETWORKING + DISTRIBUTION</inlineHelpText>
        <label>PND Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Customer_Performance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>link to the previous year for trending purposes</inlineHelpText>
        <label>Prior Customer Performance</label>
        <referenceTo>Customer_Performance__c</referenceTo>
        <relationshipLabel>Next Customer Performance</relationshipLabel>
        <relationshipName>Next_Customer_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>AMS + PND</description>
        <formula>AMS_Revenue__c +  PND_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Performance</label>
    <nameField>
        <label>Customer Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>